# Flask-App-With-Docker

./: Dockerfile  README.md  app.py  docker-compose.yml  index.html  pyproject.toml
templates/: index.html
